# zuki-themes

./: .gitattributes  CONTRIBUTING.md  README.md  gitpush.sh  local-install.sh  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
Kjell/gnome-shell/: gnome-shell.css
Zuki-shell/gnome-shell/: README  gnome-shell-high-contrast.css  gnome-shell.css  parse-sass.sh
Zuki-shell/gnome-shell/gnome-shell-sass/: _colors.scss  _common.scss  _drawing.scss  _high-contrast-colors.scss
ZukiShell/gnome-shell/: gnome-shell.css
Zukitre/: index.theme
Zukitre-firefox-theme/chrome/: userChrome.css
Zukitre/gnome-shell/: gnome-classic.css  gnome-shell.css
Zukitre/gtk-2.0/: README  assets.txt  check-radio.rc  chromium.rc  gtkrc  panel.rc  thunar.rc
Zukitre/gtk-2.0/widgets/: bars.rc  buttons.rc  check-radio.rc  panel.rc  scrollbar.rc
Zukitre/gtk-3.0/: README  _colors-public.scss  _colors.scss  _common.scss  _drawing.scss  _lightdm.scss  _other.scss  _unity.scss  _xfce.scss  assets.txt  gnome-applications.css  gtk-contained-dark.css  gtk-contained-dark.scss  gtk-contained.css  gtk-contained.scss  gtk-fallback.css  gtk-main-common.css  gtk-main.css  gtk-widgets-assets.css  gtk-widgets-backgrounds.css  gtk-widgets-borders.css  gtk-widgets.css  other-applications.css  unity.css  window-controls.css
Zukitre/metacity-1/: metacity-theme-2.xml  metacity-theme-3.xml
Zukitre/xfwm4/: bottom-left-active.xpm  bottom-left-inactive.xpm  close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-prelight.xpm  menu-pressed.xpm  right-inactive.xpm  themerc  title-1-active-shaded.xpm  title-1-active.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  title-5-active.xpm  title-5-inactive.xpm  top-left-active-shaded.xpm  top-left-active.xpm  top-left-inactive.xpm  top-right-active-shaded.xpm  top-right-active.xpm  top-right-inactive.xpm
Zukitwo/: index.theme
Zukitwo-Shell/gnome-shell/: gnome-shell.css
Zukitwo/gtk-2.0/: assets.txt  buttons.rc  caja.rc  chromium.rc  gtkrc  panel.rc  pluma.rc  thunar.rc
Zukitwo/gtk-2.0/widgets/: panel.rc
Zukitwo/gtk-3.0/: README  _colors.scss  _common.scss  _drawing.scss  _other.scss  _xfce.scss  assets.txt  gnome-applications.css  gtk-contained-dark.css  gtk-contained-dark.scss  gtk-contained.css  gtk-contained.scss  gtk-main.css  gtk-widgets-assets.css  gtk-widgets-backgrounds.css  gtk-widgets-borders.css  gtk-widgets.css  unity.css
Zukitwo/metacity-1/: metacity-theme-2.xml  metacity-theme-3.xml
Zukitwo/unity/: assets.txt  render-assets.sh
Zukitwo/xfwm4/: bottom-right-active.xpm  close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-prelight.xpm  menu-pressed.xpm  right-active.xpm  themerc  title-1-active-shaded.xpm  title-1-active.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  title-5-active.xpm  title-5-inactive.xpm  top-left-active-shaded.xpm  top-left-active.xpm  top-left-inactive.xpm  top-right-active-shaded.xpm  top-right-active.xpm  top-right-inactive.xpm
Zukiwi/: index.theme
Zukiwi/gtk-2.0/: gtkrc
Zukiwi/gtk-2.0/widgets/: bars.rc
Zukiwi/gtk-3.0/: gtk-main.css  gtk-widgets-backgrounds.css  gtk-widgets-borders.css  gtk-widgets.css  other-applications.css  window-controls.css
Zukiwi/metacity-1/: metacity-theme-2.xml  metacity-theme-3.xml
Zukiwi/xfwm4/: bottom-right-inactive.xpm
gnome-shell/: meson.build
gnome-shell/src/: gnome-shell-high-contrast.css  gnome-shell-high-contrast.scss  gnome-shell.css  gnome-shell.scss  meson.build  parse-sass.sh
gnome-shell/src/gnome-shell-sass/: _colors.scss  _common.scss  _drawing.scss  _extensions.scss  _high-contrast-colors.scss  _widgets.scss
gnome-shell/src/gnome-shell-sass/widgets/: _app-grid.scss  _calendar.scss  _check-box.scss  _dash.scss  _dialogs.scss  _entries.scss  _login-dialog.scss  _panel.scss  _popovers.scss  _search-entry.scss  _switches.scss  _third-party.scss  _window-picker.scss  _workspace-thumbnails.scss
gtk/src/Zukitre/: meson.build
gtk/src/Zukitre-dark/: meson.build
gtk/src/Zukitre-dark/gtk-2.0/: assets.txt  gtkrc  meson.build  render-assets.sh
gtk/src/Zukitre-dark/gtk-4.0/: install-dark-theme.sh  meson.build
gtk/src/Zukitre/gtk-2.0/: gtkrc  meson.build  xfce-panel.rc
gtk/src/Zukitre/gtk-3.0/: README.md  _apps.scss  _colors-public.scss  _colors.scss  _common.scss  _custom.scss  _drawing.scss  _libhandy.scss  _variables.scss  assets.txt  gtk-alt-header.css  gtk-alt-header.scss  gtk-dark.css  gtk-dark.scss  gtk-zukitwo-dark.css  gtk-zukitwo-dark.scss  gtk-zukitwo.css  gtk-zukitwo.scss  gtk.css  gtk.scss  meson.build  render-assets.sh
gtk/src/Zukitre/gtk-4.0/: _colors.scss  _common.scss  _custom.scss  _drawing.scss  gtk-dark.css  gtk-dark.scss  gtk-zukitwo-dark.css  gtk-zukitwo-dark.scss  gtk-zukitwo.css  gtk-zukitwo.scss  gtk.css  gtk.scss  meson.build  parse-sass.sh
gtk/src/Zukitwo/: meson.build
gtk/src/Zukitwo-dark/: meson.build
gtk/src/Zukitwo-dark/gtk-2.0/: assets.txt  gtkrc  meson.build  xfce-panel.rc
gtk/src/Zukitwo-dark/gtk-3.0/: install-dark-theme.sh  meson.build
gtk/src/Zukitwo-dark/gtk-4.0/: install-dark-theme.sh
gtk/src/Zukitwo/gtk-2.0/: assets.txt  gtkrc  meson.build
gtk/src/Zukitwo/gtk-3.0/: README.md  _apps.scss  _colors-public.scss  _colors.scss  (+13 more)
xfwm4/src/: meson.build
xfwm4/src/Zukitre/: meson.build  render-assets.sh
xfwm4/src/Zukitre-dark/: meson.build
xfwm4/src/Zukitwo/: meson.build
xfwm4/src/Zukitwo-dark/: meson.build  render-assets.sh  themerc
(+2 files in other folders)
